@@ -146,6 +146,7 @@ typedef struct wzd_site_fct_t wzd_site_fct_t;
 /********************* IP CHECKING ************************/
 typedef struct _wzd_ip_list_t {
   char  * regexp;
+  u8_t  is_allowed;
   struct _wzd_ip_list_t * next_ip;
 } wzd_ip_list_t;
 
@@ -510,6 +511,7 @@ typedef struct {
   u32_t         pasv_low_range;
   u32_t         pasv_high_range;
   unsigned char	pasv_ip[16];
+  wzd_ip_list_t	*login_pre_ip_checks;
   int		login_pre_ip_check;
   wzd_ip_list_t	*login_pre_ip_allowed;
   wzd_ip_list_t	*login_pre_ip_denied;
